<resources>
    <string name="app_name">Portfolio Showcase</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="button_spotify_streamer">Spotify Streamer</string>
    <string name="button_scores_app">Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_xyz_reader">XYZ Reader</string>
    <string name="button_capstone_my_own_app">Capstone: My Own App</string>

</resources>
