<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_margin="20dp">

        <Button android:id="@+id/button_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_spotify_streamer"
            style="@style/Button"
            android:elevation="8dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="showToast"/>

        <Button android:id="@+id/button_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scores_app"
            style="@style/Button"
            android:elevation="8dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="showToast"/>

        <Button android:id="@+id/button_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_library_app"
            style="@style/Button"
            android:elevation="8dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="showToast"/>

        <Button android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_build_it_bigger"
            style="@style/Button"
            android:elevation="8dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="showToast"/>

        <Button android:id="@+id/button_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_xyz_reader"
            android:elevation="30dp"
            style="@style/Button"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="showToast"/>

        <Button android:id="@+id/button_capstone_my_own_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_capstone_my_own_app"
            android:elevation="20dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            style="@style/Button.Capstone"
            android:onClick="showToast"/>

    </LinearLayout>
</LinearLayout>
